# amplfi

./: pyproject.toml
amplfi/architectures/amplfi/architectures/embeddings/: svd.py
amplfi/architectures/amplfi/architectures/flows/: base.py  coupling.py  iaf.py
amplfi/data/: tasks.py
amplfi/train/: augmentations.py  callbacks.py  conversion.py  priors.py  testing.py
amplfi/train/architectures/embeddings/: __init__.py  base.py  multimodal.py  transformer.py
amplfi/train/architectures/flows/: iaf.py
amplfi/train/callbacks/: training.py
amplfi/train/cli/: base.py
amplfi/train/configs/flow/: cbc.yaml  sg.yaml
amplfi/train/data/datasets/: base.py  flow.py  testing.py
amplfi/train/data/datasets/testing/: mdc.py
amplfi/train/data/utils/: masking_prior.py  utils.py
amplfi/train/data/waveforms/: sampler.py
amplfi/train/data/waveforms/generator/: cbc.py  generator.py
amplfi/train/models/: base.py  flow.py
libs/architectures/: pyproject.toml
libs/architectures/mlpe/architectures/: wrapper.py
libs/architectures/mlpe/architectures/embeddings/: __init__.py  dense.py
libs/architectures/mlpe/architectures/flows/: maf.py
libs/architectures/tests/: test_wrapper.py
libs/architectures/tests/embeddings/: test_dense.py
libs/data/mlpe/data/transforms/: injection.py  standard_scaler.py
libs/trainer/mlpe/trainer/: trainer.py  wrapper.py
projects/paper/: environment.yaml  posteriors.ipynb  pyproject.toml
projects/sandbox/: pyproject.toml
projects/sandbox/analysis/: pyproject.toml
projects/sandbox/analyze_with_bilby/analyze_with_bilby/: bilby_pipe.py
projects/sandbox/data_generation/data_generation/: waveforms.py
projects/sandbox/sample_with_flow/: sample_with_flow.py  utils.py
projects/sandbox/train/: config.yaml  pyproject.toml  train.py  utils.py  validation.py
projects/sandbox/train/train/: callbacks.py  cli.py
projects/sandbox/train/train/architectures/embeddings/: base.py  resnet.py
projects/sandbox/train/train/architectures/flows/: base.py  coupling.py  maf.py
projects/sandbox/train/train/data/: base.py  generator.py  sampler.py  utils.py
projects/sandbox/train/train/model/: __init__.py  model.py
projects/train/train/: augmentations.py  priors.py
projects/train/train/data/datasets/: base.py  flow.py
projects/train/train/data/waveforms/generator/: cbc.py  generator.py
projects/train/train/models/: base.py
