[tool.poetry]
name = "paper"
version = "0.1.0"
description = "Scripts for creating plots for methods paper"
authors = ["ethan.marx <ethan.marx@ligo.org>"]
license = "MIT"

[tool.pinto]
conda = {append_base_ld_library_path = true}

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
"ml4gw" = {path = "../../ml4gw/", develop = true}
"mlpe.base" = {path = "../../libs/base", extras = ["numpy"], develop = true}
"mlpe.logging" = {path = "../../libs/logging", develop = true}
"mlpe.injection" = {path = "../../libs/injection", develop = true}
"mlpe.architectures" = {path = "../../libs/architectures", develop = true}
"mlpe.data" = {path = "../../libs/data", develop = true}

mldatafind = {git = "https://github.com/ML4GW/mldatafind.git"}
typeo = {git = "https://github.com/ML4GW/typeo.git"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
ipykernel = "^6.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
